<resources>
    <string name="app_name">VIB</string>
    <string name="default_notification_channel_id">my_channel_id_151</string>
    <string name="default_notification_channel_name">VibApp</string>
    <string name="error_connection">Unable to connect to the internet please try again</string>
    <string name="error_timeout">Connection lost, Please check your internet connection</string>
    <string name="error_server">Server Error</string>
    <string name="error_back_press">Please press back again to Exit</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_exception">Some Exception Occurred</string>
    <string name="error_mobile">Please enter Mobile Number</string>
    <string name="error_valid_mobile">Please enter a valid Mobile Number</string>
    <string name="error_password">Please enter Password</string>
    <string name="error_confirm_password">Please enter confirm Password</string>
    <string name="error_passcode">Passcode does not match Retry!!</string>
    <string name="error_pass_match">Password doesnot match Retry!!</string>
    <string name="error_valid_password">Please enter a valid Password</string>
    <string name="error_first_name">Please enter First Name</string>
    <string name="error_last_name">Please enter Last Name</string>
    <string name="error_dob">Please select DOB</string>
    <string name="error_campaign_code">Please enter Campaign Code</string>
    <string name="error_org_name">Please enter Organisation Name</string>
    <string name="error_email">Please enter Email</string>
    <string name="error_valid_email">Please enter a valid Email</string>
    <string name="error_confirm_email">Please enter Confirm Email</string>
    <string name="error_email_does_not_match">Email and Confirm Email doest not match</string>
    <string name="error_pass_does_not_match">Password and Confirm Password doest not match</string>
    <string name="error_amount">Please enter Amount</string>
    <string name="error_valid_amount">Please enter a valid Amount</string>
    <string name="error_same_mobile">You can not send Money to yourself</string>
    <string name="error_fica">You need to upload your FICA Documents before making any Transaction</string>
    <string name="error_terms">You need to accept Terms and Conditions.</string>
    <string name="error_no_data">No data found.</string>
    <string name="error_insufficient_bal">Insufficient Balance</string>
    <string name="error_merchant">You have not registered or submitted the relevant documentation to become a Cashloop Merchant. If you would like to become a Merchant please click the below button.</string>
    <string name="error_product_name">Please enter Product Name</string>
    <string name="error_product_price">Please enter Product Price</string>
    <string name="error_image">Please upload Image</string>
    <string name="error_cart">Your Cart is Empty</string>
    <string name="error_alert">Alert</string>
    <string name="please_wait">Please Wait…</string>
    <string name="text_error">Error</string>
    <string name="some_error_occurred">Some Error Occurred</string>
    <string name="text_ok">Ok</string>
    <string name="i_agree">I Agree</string>
    <string name="lang_default">Tiếng Việt</string>
    <string name="lang_english">English</string>
    <string name="lang_vietnamese">Vietnamese</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_account">Forgot your account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_pin">Create PIN</string>
    <string name="create_pin_message">PIN will be used to log in the app and secure your accounts</string>
    <string name="confirm_your_pin">Confirm your PIN</string>
    <string name="confirm_pin_message">Input new PIN again to confirm</string>
    <string name="create_pin_head">PIN created</string>
    <string name="create_pin_dialog_message">You can now use the PIN to log in and secure your accounts</string>
    <string name="text_continue">Continue</string>
    <string name="input_your_pin">Input your PIN</string>
    <string name="input_pin_message">Please input PIN to activate your Face ID</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="use_face_id">Use Face ID</string>
    <string name="face_id_message">Use Face ID for fast and secured login</string>
    <string name="text_later">Later</string>
    <string name="face_id_success">Face ID successfully activated</string>
    <string name="face_id_success_message">The app will automatically use Face ID for further logins</string>
    <string name="text_account">Account</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_qr">QR</string>
    <string name="text_notification">Notification</string>
    <string name="text_others">Others</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="text_forgot_pin">Forgot PIN</string>
    <string name="enter_new_pin_message">Please enter your new PIN</string>
    <string name="create_new_pin">Create new PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="confirm_new_pin_message">Please enter your new PIN again</string>
    <string name="text_confirm">Confirm</string>
    <string name="enter_smart_otp_pin">Enter Smart OTP PIN</string>
    <string name="pin_successfully_created_forgot">PIN successfully created</string>
    <string name="pin_successfully_created_forgot_message">Your new app PIN has successfully been created.</string>
    <string name="login_pin_message">Please enter your PIN</string>
    <string name="register_face_id">Register Face ID</string>
    <string name="register_fingerprint">Register Fingerprint</string>
    <string name="error_invalid_login">Invalid login</string>
    <string name="error_invalid_login_message">The username or password is not correct or does not match. Please try again.</string>
    <string name="account_portfolio">Account portfolio</string>
    <string name="current_accounts">Current accounts</string>
    <string name="text_see_all">See all</string>
    <string name="savings_accounts">Savings accounts</string>
    <string name="loans">Loans</string>
    <string name="face_id_activation">Face ID activation</string>
    <string name="password_amp_pin"><![CDATA[Password & PIN]]></string>
    <string name="ng_n_ng_languages">Ngôn ngữ/ Languages</string>
    <string name="smart_otp_pin">Smart OTP PIN</string>
    <string name="text_invalid_pin">Invalid PIN</string>
    <string name="pin_same_digits_message">PIN should not consist of the same digits (such as 1111…). Please try again.</string>
    <string name="pin_continuous_digits_message">PIN should not be continuous numbers (such as 1234…). Please try again.</string>
    <string name="text_same_pin_error_message">PINs of the two inputs must be the same. Please try again.</string>
    <string name="title_password_pin"><![CDATA[Password & PIN]]></string>
    <string name="reset_your_app_pin">Reset your app PIN</string>
    <string name="text_change_pin">Change PIN</string>
    <string name="change_your_app_pin">Change your app PIN</string>
    <string name="text_reset_your_password">Reset your password</string>
    <string name="text_log_out">Log out</string>
    <string name="text_log_out_message">Are you sure you want to log out the app?</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="fingerprint_message">Use Fingerprint for fast and secured login</string>
    <string name="current_pin">Current PIN</string>
    <string name="current_pin_message">Please enter your current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="new_pin_message">Please enter your new PIN</string>
    <string name="change_pin_head">PIN successfully changed</string>
    <string name="change_pin_dialog_message">Your app PIN has successfully been change.</string>
    <string name="text_change_app_pin">Change app PIN</string>
    <string name="smart_otp">Smart OTP</string>
    <string name="activate_smart_otp">Activate Smart OTP</string>
    <string name="forgot_smart_otp_pin">Forgot Smart OTP PIN</string>
    <string name="text_activate_smart_otp">Activate Smart OTP</string>
    <string name="text_activate_smart_otp_message">Are you sure you want to activate Smart OTP to authenticate your transactions?</string>
    <string name="agree">Agree</string>
    <string name="create_smart_otp_pin">Create Smart OTP PIN</string>
    <string name="_6_digits_pin">6 digits PIN</string>
    <string name="_4_digits_pin">4 digits PIN</string>
    <string name="confirm_smart_otp_pin">Confirm Smart OTP PIN</string>
    <string name="smart_otp_must_be_different_from_app_pin">Smart OTP must be different from app PIN</string>
    <string name="enter_smart_otp_again">Enter Smart OTP again</string>
    <string name="text_smart_otp_activated">Smart OTP activated</string>
    <string name="text_smart_otp_activated_message">Smart OTP has successfully activated. You can now use Smart OTP to proceed your transactions.</string>
    <string name="otp_authentication">OTP authentication</string>
    <string name="text_unregister_smart_otp">Unregister Smart OTP</string>
    <string name="text_unregister_smart_otp_message">If you unregister Smart OTP, you cannot proceed your transactions until you reactivate Smart OTP. Are you sure you want to continue?</string>
    <string name="text_smart_otp_unregistered">Smart OTP unregistered</string>
    <string name="text_smart_otp_unregistered_message">Smart OTP has successfully been unregistered.</string>
    <string name="new_smart_otp_pin">New Smart OTP PIN</string>
    <string name="enter_your_new_smart_otp_pin">Enter your new Smart OTP PIN</string>
    <string name="enter_your_new_smart_otp_pin_again">Enter your new Smart OTP PIN again</string>
    <string name="text_smart_otp_pin_created">Smart OTP PIN created</string>
    <string name="text_smart_otp_pin_created_message">Your Smart OTP PIN has successfully created.</string>
    <string name="enter_current_pin">Enter current PIN</string>
    <string name="enter_your_current_smart_otp_pin">Enter your current Smart OTP PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="text_pin_successfully_changed">PIN successfully changed</string>
    <string name="text_pin_successfully_changed_message">Your Smart OTP PIN has been successfully changed.</string>
    <string name="re_enter_new_pin">Re-enter new PIN</string>
    <string name="text_forgot_smart_otp_pin">Forgot Smart OTP PIN</string>
    <string name="text_change_smart_otp_pin">Change Smart OTP PIN</string>
    <string name="text_fingerprint_activation">Fingerprint activation</string>
    <string name="text_fingerprint_activation_message">Are you sure you want to activate Fingerprint for app login?</string>
    <string name="text_activate">Activate</string>
    <string name="text_fingerprint_successfully_activated">Fingerprint successfully activated</string>
    <string name="text_fingerprint_successfully_activated_message">The app will automatically use Fingerprint for further logins</string>
    <string name="create_new_password">Create new password</string>
    <string name="new_password">New password</string>
    <string name="_8_20_characters">8-20 characters</string>
    <string name="at_least_1_lower_case_letter">At least 1 lower-case letter</string>
    <string name="at_least_1_upper_case_letter">At least 1 upper-case letter</string>
    <string name="at_least_a_digit">At least a digit</string>
    <string name="at_least_a_special_character"><![CDATA[At least a special character (~!@#$%^&*())]]></string>
</resources>