<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="useFaceIdVm"
            type="com.bb.vib.ui.accounts.useFaceId.UseFaceIdVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.accounts.useFaceId.UseFaceIdFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/faceIdIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="150dp"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_fingerprint_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textFaceId"
                style="@style/TextHeadingGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:text="@string/use_fingerprint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faceIdIcon" />

            <TextView
                android:id="@+id/textFaceIdMessage"
                style="@style/TextMessageGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:text="@string/fingerprint_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFaceId" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAgree"
                style="@style/BlueGradientButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="16dp"
                android:text="@string/i_agree"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/textFaceIdMessage"
                app:layout_constraintBottom_toTopOf="@+id/buttonLater"
                app:layout_constraintEnd_toEndOf="@+id/textFaceIdMessage"
                app:layout_constraintStart_toStartOf="@+id/textFaceIdMessage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLater"
                style="@style/HollowButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="24dp"
                android:text="@string/text_later"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonAgree"
                app:layout_constraintStart_toStartOf="@+id/buttonAgree" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>