<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forgotPinVm"
            type="com.bb.vib.ui.accounts.forgotPin.ForgotPinVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.accounts.forgotPin.ForgotPinFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textEnterUsername"
                style="@style/TextHeadingGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:gravity="start|center_vertical"
                android:text="@string/enter_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="4dp"
                android:hint="@string/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:textColorHint="@color/app_grey_500"
                android:textSize="15sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:background="@drawable/shape_edittext_unfocused_background"
                app:layout_constraintEnd_toEndOf="@+id/textEnterUsername"
                app:layout_constraintStart_toStartOf="@+id/textEnterUsername"
                app:layout_constraintTop_toBottomOf="@+id/textEnterUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:inputType="textCapCharacters"
                    android:text="NGUYENANHMINH"
                    android:background="@drawable/shape_edittext_unfocused_background"
                    android:textAllCaps="true"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textEnterPassword"
                style="@style/TextHeadingGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:visibility="gone"
                android:gravity="start|center_vertical"
                android:text="@string/enter_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="4dp"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:textColorHint="@color/app_grey_500"
                android:textSize="15sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:visibility="gone"
                android:background="@drawable/shape_edittext_unfocused_background"
                app:layout_constraintEnd_toEndOf="@+id/textEnterPassword"
                app:layout_constraintStart_toStartOf="@+id/textEnterPassword"
                app:layout_constraintTop_toBottomOf="@+id/textEnterPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_edittext_unfocused_background"
                    android:textAllCaps="true"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonContinue"
                style="@style/BlueGradientButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="24dp"
                android:text="@string/text_continue"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/textFieldUsername"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>