<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="createNewPasswordVm"
            type="com.bb.vib.ui.accounts.forgotYourAccount.forgotUsernamePassword.createNewPassword.CreateNewPasswordVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.accounts.forgotYourAccount.forgotUsernamePassword.createNewPassword.CreateNewPasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textInputNewPassword"
                style="@style/TextHeadingGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:gravity="start|center_vertical"
                android:text="@string/create_new_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_edittext_unfocused_background"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:elevation="4dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/app_grey_500"
                android:textSize="15sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/textInputNewPassword"
                app:layout_constraintStart_toStartOf="@+id/textInputNewPassword"
                app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword"
                app:passwordToggleDrawable="@drawable/show_password_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext_unfocused_background"
                    android:fontFamily="@font/inter_medium"
                    android:inputType="textPassword"
                    android:textAllCaps="true"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonContinue"
                style="@style/BlueGradientButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:text="@string/text_continue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpecial"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/imageCharLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done_selector"
                android:layout_marginTop="24dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/textFieldNewPassword"
                app:layout_constraintTop_toBottomOf="@+id/textFieldNewPassword"/>

            <TextView
                android:id="@+id/textCharLength"
                style="@style/TextMessageGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:gravity="start|center_vertical"
                android:text="@string/_8_20_characters"
                android:textSize="12sp"
                android:textColor="@color/app_grey_600"
                android:fontFamily="@font/inter_semi_bold"
                app:layout_constraintEnd_toEndOf="@+id/textFieldNewPassword"
                app:layout_constraintStart_toEndOf="@+id/imageCharLength"
                app:layout_constraintTop_toTopOf="@+id/imageCharLength"
                app:layout_constraintBottom_toBottomOf="@+id/imageCharLength"/>

            <ImageView
                android:id="@+id/imageLowerCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done_selector"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/imageCharLength"
                app:layout_constraintTop_toBottomOf="@+id/imageCharLength"/>

            <TextView
                android:id="@+id/textLowerCase"
                style="@style/TextMessageGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:gravity="start|center_vertical"
                android:text="@string/at_least_1_lower_case_letter"
                android:textSize="12sp"
                android:textColor="@color/app_grey_600"
                android:fontFamily="@font/inter_semi_bold"
                app:layout_constraintEnd_toEndOf="@+id/textCharLength"
                app:layout_constraintStart_toEndOf="@+id/imageLowerCase"
                app:layout_constraintTop_toTopOf="@+id/imageLowerCase"
                app:layout_constraintBottom_toBottomOf="@+id/imageLowerCase"/>

            <ImageView
                android:id="@+id/imageUpperCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done_selector"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/imageLowerCase"
                app:layout_constraintTop_toBottomOf="@+id/imageLowerCase"/>

            <TextView
                android:id="@+id/textUpperCase"
                style="@style/TextMessageGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:gravity="start|center_vertical"
                android:text="@string/at_least_1_upper_case_letter"
                android:textSize="12sp"
                android:textColor="@color/app_grey_600"
                android:fontFamily="@font/inter_semi_bold"
                app:layout_constraintEnd_toEndOf="@+id/textLowerCase"
                app:layout_constraintStart_toEndOf="@+id/imageUpperCase"
                app:layout_constraintTop_toTopOf="@+id/imageUpperCase"
                app:layout_constraintBottom_toBottomOf="@+id/imageUpperCase"/>

            <ImageView
                android:id="@+id/imageDigit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done_selector"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/imageUpperCase"
                app:layout_constraintTop_toBottomOf="@+id/imageUpperCase"/>

            <TextView
                android:id="@+id/textDigit"
                style="@style/TextMessageGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:gravity="start|center_vertical"
                android:text="@string/at_least_a_digit"
                android:textSize="12sp"
                android:textColor="@color/app_grey_600"
                android:fontFamily="@font/inter_semi_bold"
                app:layout_constraintEnd_toEndOf="@+id/textUpperCase"
                app:layout_constraintStart_toEndOf="@+id/imageDigit"
                app:layout_constraintTop_toTopOf="@+id/imageDigit"
                app:layout_constraintBottom_toBottomOf="@+id/imageDigit"/>

            <ImageView
                android:id="@+id/imageSpecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done_selector"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/imageDigit"
                app:layout_constraintTop_toBottomOf="@+id/imageDigit"/>

            <TextView
                android:id="@+id/textSpecial"
                style="@style/TextMessageGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:gravity="start|center_vertical"
                android:text="@string/at_least_a_special_character"
                android:textSize="12sp"
                android:textColor="@color/app_grey_600"
                android:fontFamily="@font/inter_semi_bold"
                app:layout_constraintEnd_toEndOf="@+id/textDigit"
                app:layout_constraintStart_toEndOf="@+id/imageSpecial"
                app:layout_constraintTop_toTopOf="@+id/imageSpecial"
                app:layout_constraintBottom_toBottomOf="@+id/imageSpecial"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>